# cog

./: LICENCE  LICENCES  README.md  TODO.md  flow-init  requirements.txt  setup.cfg  setup.py
cog/: cidict.py  cmd.py  config.py  directory.py  util.py
cog/cli/: access.py  access.yaml  access_argparser.py  general.yaml  group.py  group.yaml  group_argparser.py  netgroup.py  netgroup.yaml  netgroup_argparser.py  user.py  user.yaml  user_argparser.py
cog/objects/: group.py  netgroup.py  user.py
config/: settings  settings.local  templates.yaml
test/: test_directory.py
