[metadata]
name = cog
summary = configurable command-line LDAP directory manager
author = Miroslaw Baran
author-email = miroslaw@demonware.net
description-file = README.md
version = 1.0
license = BSD

[files]
packages = cog
data_files =
    etc/cog =
        config/settings
        config/templates.yaml
    etc/cog/examples =
        config/settings.local

[entry_points]
console_scripts =
    cog = cog.cmd:main
